@@ -3,7 +3,6 @@ package pl.uj.passgo.configuration.security.role;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -11,14 +10,13 @@ import java.util.stream.Stream;
 
 import static pl.uj.passgo.configuration.security.role.Permission.READ_HEALTH;
 
-
 @RequiredArgsConstructor
 public enum Privilege {
 	CLIENT(
-		Collections.emptySet()
+			Set.of(READ_HEALTH)
 	),
 	ORGANIZER(
-		Set.of(READ_HEALTH)
+			Set.of(READ_HEALTH)
 	),
 	ADMINISTRATOR(
 		Stream.of(CLIENT.permissions,
@@ -39,4 +37,5 @@ public enum Privilege {
 
 		return authorities;
 	}
+
 }
